[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Menu.theme" type="Theme" id=1]
[ext_resource path="res://Sources/Lab.gd" type="Script" id=2]
[ext_resource path="res://Resources/SmallFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/scientist.png" type="Texture" id=4]

[node name="Lab" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1680.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -136, 24 )
color = Color( 0.227451, 0.25098, 0.278431, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="Button" parent="."]
visible = false
margin_left = 48.0
margin_top = 50.0
margin_right = 498.0
margin_bottom = 142.0
theme = ExtResource( 1 )
text = "MENU"

[node name="GotoControl" type="Button" parent="."]
margin_left = 732.0
margin_top = 318.0
margin_right = 1182.0
margin_bottom = 410.0
theme = ExtResource( 1 )
text = "Do work"

[node name="EndDay" type="Button" parent="."]
visible = false
margin_left = 498.0
margin_top = 884.0
margin_right = 948.0
margin_bottom = 976.0
theme = ExtResource( 1 )
disabled = true
text = "END DAY"

[node name="Player" type="Label" parent="."]
margin_left = 48.0
margin_top = 210.0
margin_right = 88.0
margin_bottom = 302.0
theme = ExtResource( 1 )
text = "YOU"

[node name="PlayerShift" type="Label" parent="."]
margin_left = 48.0
margin_top = 342.0
margin_right = 404.0
margin_bottom = 474.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Player SHIFT"

[node name="Opponent" type="Label" parent="."]
margin_left = 698.0
margin_top = 884.0
margin_right = 978.0
margin_bottom = 1016.0
theme = ExtResource( 1 )
text = "Opponent"

[node name="OpponentShift" type="Label" parent="."]
margin_left = 1046.0
margin_top = 909.0
margin_right = 1470.0
margin_bottom = 1041.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Opponent SHIFT"

[node name="PopulationLabel" type="Label" parent="."]
margin_left = 732.0
margin_top = 476.0
margin_right = 1080.0
margin_bottom = 608.0
theme = ExtResource( 1 )
text = "Population"

[node name="Population" type="Label" parent="."]
margin_left = 1080.0
margin_top = 476.0
margin_right = 1428.0
margin_bottom = 608.0
theme = ExtResource( 1 )
text = "0"

[node name="DayLabel" type="Label" parent="."]
margin_left = 732.0
margin_top = 608.0
margin_right = 1080.0
margin_bottom = 740.0
theme = ExtResource( 1 )
text = "Day"

[node name="Day" type="Label" parent="."]
margin_left = 1080.0
margin_top = 608.0
margin_right = 1428.0
margin_bottom = 740.0
theme = ExtResource( 1 )
text = "0"

[node name="DiscardPileLabel" type="Label" parent="."]
visible = false
margin_left = 1376.0
margin_top = 50.0
margin_right = 1724.0
margin_bottom = 182.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Discard pile"

[node name="DiscardPile" type="HBoxContainer" parent="."]
visible = false
margin_left = 1428.0
margin_top = 109.0
margin_right = 1596.0
margin_bottom = 375.0

[node name="Avatar" type="Sprite" parent="."]
position = Vector2( 350, 643 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Menu" to="." method="on_menu_pressed"]
[connection signal="pressed" from="GotoControl" to="." method="on_goto_control_pressed"]
[connection signal="pressed" from="EndDay" to="." method="on_end_day_pressed"]
